# semantik

./: .gitignore  BUILD_SUMMARY.md  PACKAGING.md  QUICKSTART.md  README.md  app.py  app_readonly.py  build.bat  build.sh  build_macos.sh  generate_icon.py  logo.icns  main.py  pdf_search.spec  pyproject.toml
