[project]
name = "ragdoll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "llama-index>=0.14.4",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-langchain>=0.4.1",
]
